--- a/index.html
+++ b/index.html
@@ -86,7 +86,37 @@
       <a href="https://www.instagram.com/piashkhondoker/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://wa.me/qr/YECZL3TZLXNOM1" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
     </div>
-  </section> <footer>
+  </section>
+  <!-- FRIENDS' PORTFOLIOS -->
+<section id="friends" class="section-padding">
+  <div class="container">
+    <h2>Friends' Portfolios</h2>
+    <p class="section-intro">
+      Explore the professional portfolios of my talented friends — showcasing their creativity, skills, and achievements.
+    </p>
+    <div class="friends-grid">
+      <div class="friend-card">
+        <h3>Sanjid</h3>
+        <p>Creative Portfolio showcasing design and academic skills.</p>
+        <a href="https://sanjidcse.github.io/Sanjid-s-Portfolio/" target="_blank" class="btn">Visit Portfolio</a>
+      </div>
+
+      <div class="friend-card">
+        <h3>Sanjana</h3>
+        <p>Creative Portfolio showcasing design and academic skills.</p>
+        <a href="https://sanjanasanji.github.io/Sanjana_Portfolio/" target="_blank" class="btn">Visit Portfolio</a>
+      </div>
+
+      <div class="friend-card">
+        <h3>Tasnim Shanjida</h3>
+        <p>Personal Portfolio highlighting projects, skills, and achievements.</p>
+        <a href="https://tasnimshanjida.github.io/35/" target="_blank" class="btn">Visit Portfolio</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <footer>
     <div class="container">
       <p>&copy; 2025 MD. Piash Khondokar. All rights reserved.</p>
     </div>
